
2003-08-13	Gaurav Vaish <gvaish_mono AT lycos.com>

	* ControlAdapter.cs     : Style { get; }           - Implemented.
	* HtmlControlAdapter.cs : Towards finishing.
	* HtmlPageAdapter.cs    : PersistCookielessData    - Mocked.
	* HtmlMobileTextWriter.cs
	                        : EnterStyle(Style)        - Mocked.

2003-08-07	Gaurav Vaish <gvaish_mono AT lycos.com>

	* ControlAdapter.cs     : Mark Render(...) virtual.
	* HtmlControlAdapter.cs : AddAttributes(...),
	                          ExitSecondaryUIMode(),
	                          LoadAdapterState(),
	                          Render(...)               - Implemented.

2003-06-17	Gaurav Vaish <gvaish_mono AT lycos.com>

	* HtmlControlAdapter.cs : A little more implementation.
	* HtmlMobileTextWriter.cs,
	* MultiPartWriter.cs,
	* MobileTextWriter.cs   : Dummy implementation.
	* MobileControl.cs      : Now implements IAttributeAccessor.
	                          -- Commented out.

2003-05-21	Gaurav Vaish <gvaish_mono AT lycos.com>

	* HtmlControlAdapter.cs : Partial implementation.
	* HtmlFormAdapter.cs    : Initial implementation.
	* HtmlPageAdapter.cs    : Initial implementation.

2003-04-29	Gaurav Vaish <gvaish_mono AT lycos.com>

	* ControlAdapter.cs     : Some more methods.

2003-04-08	Gaurav Vaish <gvaish_mono AT lycos.com>

	* ControlAdapter.cs     : Initial implementation.
	* HtmlControlAdapter.cs : Corrected the namesapce.

2003-04-08	Gaurav Vaish <gvaish_mono AT lycos.com>

	* HtmlControlAdapter.cs     : Initial implementation.